# XMLFramework

./: BUILD.md  CMakeLists.txt
Apps/: CMakeLists.txt  xmlpipeline.cpp
Framework/: CMakeLists.txt
Framework/src/: XPathFilter.cpp
Toolkit/: CMakeLists.txt
